# trackflow

./: .github_update  .gitignore  ADDING_TRACKFLOW_TO_CRM_NAVIGATION.md  CONTRIBUTING.md  CRM_NAVIGATION_STATUS.md  DOCKER_DEVELOPMENT.md  GETTING_STARTED.md  INTEGRATION.md  LICENSE  MARKETPLACE.md  PRODUCTION_GUIDE.md  QUICK_START.md  README.md  REDDIT_SOLUTION_GUIDE.md  SCHEMA_AUDIT.md  SETUP_CRM_NAVIGATION.md  TROUBLESHOOTING.md  deploy.sh  dev.sh  docker-compose.yml  fix_doctypes.py  fix_internal_ip_range.py  pyproject.toml  requirements.txt
.frappe_cloud/: build.sh
.github/workflows/: test.yml
crm-navigation-implementation/: IMPLEMENTATION_STEPS.md  TrackFlowDashboard.vue  router-config.js
docker/: Dockerfile.frappe  mariadb.cnf  setup.sh
docs/: IMPLEMENTATION.md  architecture-flow.md  database-schema.md  external-site-tracking.md  implementation-guide.md
frontend/: README.md  package.json  vite.config.js
trackflow/: __init__.py  attribution.py  boot.py  dashboard.py  hooks.py  install.py  modules.txt  notifications.py  patches.txt  permissions.py  run_tests.sh  tasks.py  tracking.py  utils.py
trackflow/api/: __init__.py  analytics.py  auth.py  campaign.py  debug.py  email.py  emergency.py  links.py  pixel.py  reports.py  track.py  tracking.py  v1.py  visitor.py
trackflow/config/: __init__.py  crm.py  desktop.py  trackflow.py
trackflow/fixtures/: crm_workspace_extension.json  roles.json  trackflow_workspace.json  workspace.json
trackflow/integrations/: __init__.py  contact.py  crm_deal.py  crm_lead.py  crm_organization.py  deal.py  lead.py  (+1 more)
(+149 files in other folders)
